feat: extend v1/products endpoint to support filtering